<resources>
    <string name="app_name">Playlist</string>
    <string name="button_get_top_tracks">Get Top Tracks</string>
    <string name="tracklist_image_content_description">Track Image</string>
    <string name="menu_item_add">Add Item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_item1">Playlists</string>
    <string name="bottom_nav_item2">Artists</string>
    <string name="bottom_nav_item3">Tracks</string>
    <string name="action_search">Search</string>
    <string name="spotify_url">https://www.spotify.com</string>
    <string name="button_add">Add</string>
    <string name="hint_trackURL">Enter URL</string>
    <string name="hint_trackName">Enter Trackname</string>
    <string name="error_no_track_name">Please enter in a track name</string>
    <string name="button_update">Update</string>
    <string name="error_no_artist_name">Please enter a name</string>
    <string name="error_no_playlist_name">Please enter a name</string>
    <string name="hint_playlistName">Enter Playlist Name</string>
    <string name="hint_artistName">Enter Artist Name</string>
    <string name="button_delete">Delete</string>
    <string name="artist_image">Artist Image</string>
    <string name="update_all">Update All</string>
    <string name="button_search">Search</string>
    <string name="error_no_track_selected">Please Select a Track to Add</string>
    <string name="button_login">Login</string>
    <string name="error_no_artist_selected">Please Select an Artist</string>
    <string name="button_start">Start</string>
</resources>