<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.mk.playlist.fragments.tracks.TrackDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/trackName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAlignment="viewStart"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="A Track Name" />
                <TextView
                    android:id="@+id/artistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAlignment="viewStart"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="An Artist Name" />
                <!--  Spotify URI -->
                <TextView
                    android:text="@string/spotify_url"
                    android:id="@+id/url"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:autoLink="web">
                </TextView>
                <Button
                    android:id="@+id/buttonUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_update"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:backgroundTint="@color/delete"
                    android:text="@string/button_delete"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>